# https://peps.python.org/pep-0621/-
[project]

# Package version
version = "0.0.1"

# The name of the python package. This should be the same as the modules code directory
name = "tidygraph"
description = "tidy-like interface for network manipulation and visualization in Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]

# Declare any runtime pip dependencies (such as numpy).
# Do NOT put test dependencies (such as pytest) here.
# Test dependencies go in the [dependency-groups.test] section.
dependencies = ["igraph>=1.0.0", "narwhals>=2.15.0", "polars[pandas]>=1.37.1"]

# Do NOT put runtime dependencies here. These libraries will not be included when
# the package "deploys".
[dependency-groups]
dev = []
test = [
  "pytest>=9.0.2",
  "pytest-black>=0.6.0",
  "pytest-cov>=7.0.0",
  "pytest-isort>=4.0.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
combine_as_imports = true
line_length = 60
profile = "black"

# Pytest configuration
# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--black",
  "src",
  "tests",
  "--cache-clear",
  "--cov-report=term",
  "--cov=tidygraph",
  "--durations=0",
  "--isort",
  "src",
  "tests",
  "--numprocesses=auto", # multiprocessing
  "-x",                  # stop tests after first failure
]
