# https://peps.python.org/pep-0621/-
[project]
name = "tidygraph"
version = "0.3.7"
description = "tidy-like interface for network manipulation and visualization in Python"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
urls = { issues = "https://github.com/yiping-allison/tidygraph-py/issues", repository = "https://github.com/yiping-allison/tidygraph-py" }
# Declare any runtime pip dependencies (such as numpy).
# Do NOT put test dependencies (such as pytest) here.
# Test dependencies go in the [dependency-groups.test] section.
dependencies = [
  "igraph>=1.0.0",
  "narwhals>=2.15.0",
  "pandas>=3.0.0",
]

[project.optional-dependencies]
cairo = [
  "cairocffi==1.7.1",
]
matplotlib = [
  "matplotlib==3.10.5",
]
plotly = [
  "kaleido>=1.2.0",
  "plotly>=6.5.2",
]

# Do NOT put runtime dependencies here. These libraries will not be included when
# the package "deploys".
[dependency-groups]
dev = [
  "pandas-stubs>=3.0.0",
  "ruff>=0.14.13",
]
test = [
  "cairocffi>=1.7.1",
  "polars[pandas]>=1.37.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.13",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.pytest]
addopts = [
  "--cache-clear",
  "--cov-report=term",
  "--cov=tidygraph",
  "--durations=0",
  "--numprocesses=auto",  # multiprocessing
  "-x",  # stop tests after first failure
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes (unused imports, undefined names, etc)
  "B",  # flake8-bugbear (likely bugs and design problems)
  "RUF",  # ruff-specific rules
  "I",  # isort (import sorting)
  "D",  # pydocstyle (docstring conventions)
]
ignore = [
  "D417",
]

[tool.ruff.lint.per-file-ignores]
"{tests}/*" = ["D100", "D104", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[[tool.uv.index]]
# https://docs.astral.sh/uv/guides/package/#publishing-your-package
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
# https://docs.pypi.org/api/index-api/
# https://docs.pypi.org/api/upload/
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true
